# IPPE

./: README.md  licence.txt
cpp/: CMakeLists.txt
cpp/include/IPPE/: ippe.h
cpp/include/IPPE/src/IPPE/: CMakeLists.txt
cpp/include/IPPE/src/IPPE_demo_square_pointset/: CMakeLists.txt
cpp/src/IPPE/: CMakeLists.txt  ippe.cpp
cpp/src/IPPE/IPPE_demo_generic_pointset/: CMakeLists.txt
cpp/src/IPPE_demo_generic_pointset/: CMakeLists.txt  IPPE_demo_generic_pointset.cpp
cpp/src/IPPE_demo_square_pointset/: CMakeLists.txt  IPPE_demo_square_pointset.cpp
examples/planarTemplate1/inputImages/: K.mat  kc.mat
matlab/: IPPE_demo1.m  IPPE_demo2.m
matlab/IPPE_core/: IPPE_dec.m  perspectiveIPPE.m
matlab/IPPE_utils/: RodriguesConversion.m  asiftWrapper.m  basicHomographyRansac.m  detectAndMatchFeatures.m  featureBasedPlanePoseFromImage.m  makePlanarTemplate.m  normaliseImagePoints.m  plotPlaneAxes.m  pnpLMRefinement.m  undistortImage.m  unnormaliseImagePoints.m  visualiseHomography.m
matlab/homogEstimationMethods/harker/: homographyHarker.m  is2DData.m
